# little_maia2

./: LICENSE  README.md  pyproject.toml
maia2/: data_ingestion.py  data_processing.py  logger.py  utils.py  viz.py
maia2/docs/: utils.md
